[package]
name = "ras"
version = "0.0.1"
authors = ["Cid Huang <cidhuang@gmail.com>"]
edition = "2021"

[dependencies]
env_logger = "^0"
actix-web = { version = "3", features = ["openssl"] }
sqlx = { version = "0.4", features = [ "runtime-actix-native-tls" , "mysql" ] }
openssl = { version = "^0", features = ["v110"] }
actix-http = "^2"
actix-files = "^0"
sailfish = "0.3"
quote = "=1.0.10"
serde_json = {version = "1.0"}
chrono = "^0"
serde = { version = "1.0", features = ["derive"] }
async-fs = "1"
